--- a/CleanArch/Infra.IoC/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
+++ b/CleanArch/Infra.IoC/CleanArch.Infra.IoC/CleanArch.Infra.IoC.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
   </ItemGroup>
 
@@ -12,6 +13,8 @@
     <ProjectReference Include="..\..\Application\CleanArch.Application\CleanArch.Application.csproj" />
     <ProjectReference Include="..\..\Domain\CleanArch.Domain\CleanArch.Domain.csproj" />
     <ProjectReference Include="..\..\Infra.Data\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
+    <ProjectReference Include="..\..\Domain\CleanArch.Domain.Core\CleanArch.Domain.Core.csproj" />
+    <ProjectReference Include="..\..\Infra.Bus\CleanArch.Infra.Bus\CleanArch.Infra.Bus.csproj" />
   </ItemGroup>
 
 </Project>
